<resources>
    <string name="app_name">AppBanTraiCay</string>
    <string name="title_loading">Loading</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="news">News</string>
    <string name="account">Account</string>
    <string name="order">Order</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="new_product">New product</string>
    <string name="buy_now">Buy now</string>
    <string name="see_cart">See cart</string>
    <string name="detail_image">Detail image</string>
    <string name="related_products">Related products</string>
    <string name="reports">News</string>
    <string name="request_pending">Request Pending</string>
    <string name="request_complete">Request Complex</string>
    <string name="assets_avaiable">Assets Avaiable</string>
    <string name="assets">Assets</string>
    <string name="requests">Request</string>
    <string name="title_account">Account</string>
    <string name="title_product">Product</string>
    <string name="title_order">Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_wellcome">Wellcome to app</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_login">Login</string>
    <string name="email_error">Email is not valid </string>
    <string name="password_error">Password must input at least 6 character </string>
    <string name="null_error">This field require not null</string>
    <string name="hint_user_name">User Name</string>
    <string name="user_name_error">UserName is not valid</string>
    <string name="login_faild">Tài khoản không chính sác</string>
    <string name="btn_verify">Send</string>
    <string name="btn_verify_1">This proves that the account really belongs to you</string>
    <string name="btn_verify_2">Confirm the code provided in your email.xxx.xxx</string>
    <string name="hint_insert_code">insert_code</string>
    <string name="btn_send">Send</string>
    <string name="lbl_error_verify_code">Verify code</string>
    <string name="verify_account">Verify Account</string>
    <string name="email_do_not_exits">Email do not exits</string>
    <string name="lbl_new_password">New Password</string>
    <string name="hint_new_password">Password again</string>
    <string name="lbl_agree">Agree</string>
    <string name="incorrect_code">Incorrect code</string>
    <string name="password_are_not_the_same">Passwords are not the same</string>
    <string name="update_faild">Update faild</string>
    <string name="verify_code_incorrect">Verify code incorrect</string>
    <string name="text_title_username">UserName:</string>
    <string name="text_title_password">Password:</string>
    <string name="text_title_email">Email:</string>
    <string name="text_title_address">Address:</string>
    <string name="text_title_phone">Phone:</string>
    <string name="query_hint_text_account">Please input account</string>
    <string name="order_transporting">Order Transporting</string>
    <string name="order_deleted">Order Deleted</string>
    <string name="order_success">Order Success</string>
    <string name="update_password_success">Update password success</string>
    <string name="lbl_you_already_an_account">You already an account? login</string>
    <string name="register_success">Register Success</string>
    <string name="sing_out">Sign out</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="text_title_id">Id:</string>
    <string name="title_text_date_order">Date Order:</string>
    <string name="title_text_status_order">Status Order:</string>
    <string name="order_approving">Order Approving</string>
    <string name="vnd">Vnd</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total_price">Total price:</string>
    <string name="pay">Pay</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="number_product_reached_minimum">Number product reached minimum</string>
    <string name="update_success">Update Success</string>
    <string name="remove_success">Remove Success</string>
    <string name="stripper_is_incorrect">Stripper is incorrect</string>
    <string name="pay_success">Pay Success</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_help_support">Help Support</string>
    <string name="lbl_about">About</string>
    <string name="lbl_setting">Setting</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_font">Font</string>
    <string name="lbl_font_size">Font Size</string>
    <string name="lbl_get_notifications">Get Notification</string>
    <string name="lbl_favorite_history">Favarite History</string>
    <string name="lbl_save">Save</string>
    <string name="font1">Font Family 1</string>
    <string name="font2">Font Family 2</string>
    <string name="font3">Font Family 3</string>
    <string name="font4">Font Family 4</string>
    <string name="font_size12">12</string>
    <string name="font_size13">13</string>
    <string name="font_size14">14</string>
    <string name="font_size15">15</string>
    <string name="font_size16">16</string>
    <string name="save_font_size_success">Save Success</string>
    <string name="location_address">Address: Da Nang, Hoa Quy Ward, Ngu Hanh Son District</string>
    <string name="phone">0366426402</string>
    <string name="email_contact">thaibasang8@gmail.com</string>
    <string name="school">Truuong Cao Dang CNTT-DHDN</string>
    <string name="description_school">Duong Nam Ky Khoi Nghia</string>
    <string name="lbl_info">Info</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_hint_address">Permanent address</string>
    <string name="lbl_hint_phone">+84 0xxx-xxx-xxx</string>
    <string name="lbl_hint_email">xxxx@gmail.com</string>
    <string name="code">Code</string>
    <string name="order_of_you">Order of you</string>
    <string name="pending_and_approve">Pending Approve</string>
    <string name="delivered">Delivered</string>
    <string name="canceled">Canceled</string>
    <string name="payment_option">Payment Option</string>
    <string name="payment_when_multiplying">Payment when multiplying</string>
    <string name="payment_with_visa">Payment with visa</string>
    <string name="information_order">Information Order</string>
    <string name="send">Send</string>
    <string name="being_transported">Being Transported</string>
    <string name="query_hint_text_news">Please enter name news</string>
    <string name="content">Content</string>

</resources>