<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.appbantraicay.ui.auth.viewmodel.NewPasswordViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/imgBack"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_close" />

        <TextView
            style="@style/TextTitle"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/lbl_new_password"
            android:textColor="@color/h904CAF50"
            android:textSize="@dimen/_25ssp" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/Edittext"
            android:autofillHints="@string/hint_email"
            android:text="@={viewModel.password}"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
             />

        <EditText
            style="@style/Edittext"
            android:id="@+id/edtNewPassword"
            android:autofillHints="@string/hint_new_password"
            android:hint="@string/hint_new_password"
            android:text="@={viewModel.newPassword}"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
             />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Button"
            android:id="@+id/btnAgree"
            android:background="@drawable/background1"
            android:text="@string/lbl_agree"
            />
    </LinearLayout>
</layout>