<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="action"
            type="com.example.appbantraicay.ui.auth.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_4sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    style="@style/TextTitle"
                    android:textColor="@color/h5E5E5E"
                    android:text="@string/verify_account"
                    tools:text = "verify account"/>

                <TextView
                    style="@style/TextContent"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="@string/btn_verify_1" />

                <TextView
                    tools:text = "abc@gmail.com"
                    style="@style/TextContent"
                    android:text="@{action.email}"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawablePadding="@dimen/_5sdp"
                    app:drawableStartCompat="@drawable/ic_user" />

                <TextView
                    style="@style/TextContent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/btn_verify_2" />

                <EditText
                    android:id="@+id/editTextCode"
                    style="@style/Edittext"
                    android:layout_width="@dimen/_200sdp"
                    android:padding="@dimen/dp0"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:autofillHints="@string/hint_insert_code"
                    android:gravity="center"
                    android:text="@={action.editTextCode}"
                    android:hint="@string/hint_insert_code"
                    android:inputType="number"
                   />

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/h904CAF50"
                    android:text="@string/btn_send" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>
