<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linerGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMenu"
            style="@style/textStyleTitle"
            android:textSize="@dimen/_14ssp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/hFFC107"
            android:clickable="true"
            android:paddingHorizontal="@dimen/_10sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableStart="@drawable/ic_menu"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="#A9000000"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMenu">

            <TextView
                android:id="@+id/txt_home"
                style="@style/textStyleTitle"
                android:textSize="@dimen/_14ssp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_cart"
                style="@style/textStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:clickable="true"
                android:textSize="@dimen/_14ssp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/cart"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/txt_home" />

            <TextView
                android:id="@+id/txt_news"
                style="@style/textStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:clickable="true"
                android:textSize="@dimen/_14ssp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/news"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/txt_cart" />

            <TextView
                android:id="@+id/txt_profile"
                style="@style/textStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:clickable="true"
                android:textSize="@dimen/_14ssp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/my_profile"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/txt_news" />

            <TextView
                android:id="@+id/txt_order"
                style="@style/textStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:textSize="@dimen/_14ssp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/order"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/txt_profile" />

            <TextView
                android:id="@+id/txt_help_support"
                style="@style/textStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:clickable="true"
                android:textSize="@dimen/_14ssp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/lbl_help_support"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/txt_order" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_btn_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="txt_home,txt_cart,txt_news,txt_profile,txt_order,txt_help_support" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <data>

    </data>
</layout>